# water_potability_classifier

./: README.md  setup_project.sh
water_potability_classifier/: .pre-commit-config.yaml  Makefile  pyproject.toml
water_potability_classifier/mlruns/0/: meta.yaml
water_potability_classifier/mlruns/0/5de2aba2b3cb4f009e5c18f6c5ca723a/: meta.yaml
water_potability_classifier/mlruns/0/5de2aba2b3cb4f009e5c18f6c5ca723a/tags/: mlflow.log-model.history  mlflow.runName
water_potability_classifier/mlruns/577653469998454061/: meta.yaml
water_potability_classifier/mlruns/577653469998454061/88e9867f096d4d7bbd0792ecac552954/: meta.yaml
water_potability_classifier/mlruns/577653469998454061/88e9867f096d4d7bbd0792ecac552954/metrics/: accuracy
water_potability_classifier/mlruns/577653469998454061/88e9867f096d4d7bbd0792ecac552954/tags/: mlflow.log-model.history  mlflow.runName
water_potability_classifier/mlruns/577653469998454061/a3243b4ee36441b5b9e8ac9a440c5fa6/: meta.yaml
water_potability_classifier/mlruns/577653469998454061/a3243b4ee36441b5b9e8ac9a440c5fa6/tags/: mlflow.runName  mlflow.source.git.commit
water_potability_classifier/mlruns/577653469998454061/b0debe7dd5424749a40ba0de0e714d98/: meta.yaml
water_potability_classifier/mlruns/577653469998454061/b9f0fd7545c84f2db7a4db8a5df7ffc2/: meta.yaml
water_potability_classifier/mlruns/577653469998454061/e33a6c5209364543b2db6d53f15addb6/: meta.yaml
water_potability_classifier/src/data_processing/: preprocessing.py
water_potability_classifier/src/models/: list_models.py  predict.py  train.py
(+17 files in other folders)
