[project]
name = "water-potability-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Iaquine"}
]
readme = "README.md"
requires-python = ">=3.12"
[tool.poetry]
name = "water-potability-classifier"
version = "0.1.0"
description = ""
authors = ["Iaquine"]
readme = "README.md"
packages = [{include = "water_potability_classifier"}]  # Corrigido aqui!

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
numpy = ">=2.2.2,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
mlflow = ">=2.20.1,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.4"
pytest = "^8.3.4"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


